# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import menuRouter from "./menu";
+import reservationsRouter from "./reservations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(menuRouter);
+router.use(reservationsRouter);
 
 export default router;
